--- a/Stock Management System/Stock Management System/Stock Management System.csproj
+++ b/Stock Management System/Stock Management System/Stock Management System.csproj
@@ -189,6 +189,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Catagory.cs" />
+    <Compile Include="Models\Company.cs" />
+    <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
