--- a/Stock Management System/Stock Management System/Web.config
+++ b/Stock Management System/Stock Management System/Web.config
@@ -16,6 +16,9 @@
       </controls>
     </pages>
   </system.web>
+  <connectionStrings>
+    <add name="SMDB" connectionString="Server=DESKTOP-KIQISOE\MUSHFIQSQL;Database=StockManagementDB;Integrated Security=true; "/>
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
       <dependentAssembly>
@@ -30,6 +33,7 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930"/>
       </dependentAssembly>      
+    
     </assemblyBinding>
   </runtime>
   <system.codedom>
