--- a/Stock Management System/Stock Management System/Stock Management System.csproj
+++ b/Stock Management System/Stock Management System/Stock Management System.csproj
@@ -107,6 +107,7 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="CatagorySetupPage.aspx" />
+    <Content Include="CompanySetUpUi.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -126,6 +127,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="ItemSetupUi.aspx" />
     <Content Include="LogInForm.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -159,6 +161,7 @@
     <Content Include="Site.Master" />
     <Content Include="StockInUi.aspx" />
     <Content Include="StockOutUi.aspx" />
+    <Content Include="ViewItemBetweenDatesUI.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -175,6 +178,9 @@
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BLL\CatagoryManager.cs" />
+    <Compile Include="BLL\CompanyManager.cs" />
+    <Compile Include="BLL\ItemManager.cs" />
+    <Compile Include="BLL\StockManager.cs" />
     <Compile Include="BLL\UserManager.cs" />
     <Compile Include="CatagorySetupPage.aspx.cs">
       <DependentUpon>CatagorySetupPage.aspx</DependentUpon>
@@ -182,6 +188,13 @@
     </Compile>
     <Compile Include="CatagorySetupPage.aspx.designer.cs">
       <DependentUpon>CatagorySetupPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CompanySetUpUi.aspx.cs">
+      <DependentUpon>CompanySetUpUi.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CompanySetUpUi.aspx.designer.cs">
+      <DependentUpon>CompanySetUpUi.aspx</DependentUpon>
     </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -191,6 +204,9 @@
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
     <Compile Include="DAL\CatagoryGateway.cs" />
+    <Compile Include="DAL\CompanyGateway.cs" />
+    <Compile Include="DAL\ItemGateway.cs" />
+    <Compile Include="DAL\Stockgateway.cs" />
     <Compile Include="DAL\UserGateway.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -201,6 +217,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="ItemSetupUi.aspx.cs">
+      <DependentUpon>ItemSetupUi.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ItemSetupUi.aspx.designer.cs">
+      <DependentUpon>ItemSetupUi.aspx</DependentUpon>
     </Compile>
     <Compile Include="LogInForm.aspx.cs">
       <DependentUpon>LogInForm.aspx</DependentUpon>
@@ -248,6 +271,13 @@
     </Compile>
     <Compile Include="StockOutUi.aspx.designer.cs">
       <DependentUpon>StockOutUi.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ViewItemBetweenDatesUI.aspx.cs">
+      <DependentUpon>ViewItemBetweenDatesUI.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ViewItemBetweenDatesUI.aspx.designer.cs">
+      <DependentUpon>ViewItemBetweenDatesUI.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
