--- a/Stock Management System/Stock Management System/Stock Management System.csproj
+++ b/Stock Management System/Stock Management System/Stock Management System.csproj
@@ -180,6 +180,7 @@
     <Compile Include="BLL\CatagoryManager.cs" />
     <Compile Include="BLL\CompanyManager.cs" />
     <Compile Include="BLL\ItemManager.cs" />
+    <Compile Include="BLL\SellManager.cs" />
     <Compile Include="BLL\StockManager.cs" />
     <Compile Include="BLL\UserManager.cs" />
     <Compile Include="CatagorySetupPage.aspx.cs">
@@ -206,6 +207,7 @@
     <Compile Include="DAL\CatagoryGateway.cs" />
     <Compile Include="DAL\CompanyGateway.cs" />
     <Compile Include="DAL\ItemGateway.cs" />
+    <Compile Include="DAL\SellGateway.cs" />
     <Compile Include="DAL\Stockgateway.cs" />
     <Compile Include="DAL\UserGateway.cs" />
     <Compile Include="Default.aspx.cs">
@@ -235,6 +237,7 @@
     <Compile Include="Models\Catagory.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Sell.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchVIewItemsSummaryUI.aspx.cs">
@@ -279,6 +282,7 @@
     <Compile Include="ViewItemBetweenDatesUI.aspx.designer.cs">
       <DependentUpon>ViewItemBetweenDatesUI.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\CatagoryCompanyWISeItemView.cs" />
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
