added edit option for company and catagory

--- a/Stock Management System/Stock Management System/Web.config
+++ b/Stock Management System/Stock Management System/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -17,7 +17,9 @@
     </pages>
   </system.web>
   <connectionStrings>
-    <add name="SMDB" connectionString="Server=DESKTOP-40V57DS;Database=StockManagementDB;Integrated Security=true; "/>
+      <add name="SMDB" connectionString="Server=DESKTOP-40V57DS;Database=StockManagementDB;Integrated Security=true; " />
+      <add name="ConnectionString" connectionString="Data Source=DESKTOP-40V57DS;Initial Catalog=StockManagementDB;Integrated Security=True"
+          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
