--- a/Stock Management System/Stock Management System/Stock Management System.csproj
+++ b/Stock Management System/Stock Management System/Stock Management System.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="itextsharp, Version=5.5.13.1, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.13.1\lib\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
@@ -113,6 +116,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\jquery-ui.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
@@ -135,6 +139,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
+    <Content Include="Scripts\jquery-ui.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
@@ -180,6 +186,7 @@
     <Compile Include="BLL\CatagoryManager.cs" />
     <Compile Include="BLL\CompanyManager.cs" />
     <Compile Include="BLL\ItemManager.cs" />
+    <Compile Include="BLL\SellManager.cs" />
     <Compile Include="BLL\StockManager.cs" />
     <Compile Include="BLL\UserManager.cs" />
     <Compile Include="CatagorySetupPage.aspx.cs">
@@ -206,6 +213,7 @@
     <Compile Include="DAL\CatagoryGateway.cs" />
     <Compile Include="DAL\CompanyGateway.cs" />
     <Compile Include="DAL\ItemGateway.cs" />
+    <Compile Include="DAL\SellGateway.cs" />
     <Compile Include="DAL\Stockgateway.cs" />
     <Compile Include="DAL\UserGateway.cs" />
     <Compile Include="Default.aspx.cs">
@@ -235,6 +243,7 @@
     <Compile Include="Models\Catagory.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\Sell.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchVIewItemsSummaryUI.aspx.cs">
@@ -279,6 +288,7 @@
     <Compile Include="ViewItemBetweenDatesUI.aspx.designer.cs">
       <DependentUpon>ViewItemBetweenDatesUI.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\CatagoryCompanyWISeItemView.cs" />
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
