--- a/Stock Management System/Stock Management System/Stock Management System.csproj
+++ b/Stock Management System/Stock Management System/Stock Management System.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Sell.cs" />
+    <Compile Include="Models\Stockout.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchVIewItemsSummaryUI.aspx.cs">
@@ -286,6 +287,7 @@
       <DependentUpon>ViewItemBetweenDatesUI.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\CatagoryCompanyWISeItemView.cs" />
+    <Compile Include="ViewModels\ItemCompanyWIseView.cs" />
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
